--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_staggered_animations: "^0.1.2"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
