--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_staggered_animations: "^0.1.2"
+  flutter_staggered_animations: ^1.0.0
 
 dev_dependencies:
   flutter_test:
