--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,18 @@
 name: flutter_boom_menu
 description: Flutter plugin to implement a Boom Menu, with icons, title, sub title, animated FAB Icon and hide on scrolling.
-version: 1.0.2
+version: 2.0.0-nullsafety.0
 author: Mohanraj <mohanraj153@gmail.com>
   Ralph Noel Bruno <brunoralphjr@gmail.com>
+  Kuchienkz <wahyupamengas.developer@gmail.com>
 homepage: https://github.com/ralphnoel13/flutter_boom_menu
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=1.20.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
   flutter_staggered_animations: ^1.0.0
 
 dev_dependencies:
@@ -24,17 +25,21 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   # This section identifies this Flutter project as a plugin project.
-  # The androidPackage and pluginClass identifiers should not ordinarily
+  # The 'pluginClass' and Android 'package' identifiers should not ordinarily
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.example.flutter_boom_menu
-    pluginClass: FlutterBoomMenuPlugin
+    platforms:
+      android:
+        package: com.example.flutter_boom_menu
+        pluginClass: FlutterBoomMenuPlugin
+      ios:
+        pluginClass: FlutterBoomMenuPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  #  assets:
+  #    - images/a_dot_burr.jpeg
+  #    - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
@@ -42,14 +47,10 @@ flutter:
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
-  # To add custom fonts to your plugin package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   fonts:
     - family: Futura
       fonts:
         - asset: assets/fonts/futura.ttf
+
   # For details regarding fonts in packages, see
   # https://flutter.dev/custom-fonts/#from-packages
